--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  api_cache_manager: ^1.0.2
+  snippet_coder_utils: ^1.0.9
+  pedometer: ^4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.6
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/login_signup/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
