--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   api_cache_manager: ^1.0.2
   snippet_coder_utils: ^1.0.9
   pedometer: ^4.0.1
+  video_player: ^2.7.2
+  # youtube_player_flutter_ifraim: ^0.0.2
+  youtube_player_flutter: ^8.0.0
+  youtube_video_player: ^0.0.1
+  # flutter_native_splash: ^2.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -67,6 +72,7 @@ flutter:
   assets:
     - assets/images/login_signup/
     - assets/images/
+    - assets/images/tutorial_images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
